<resources>
    <string name="app_name">Drogadelia</string>
    <string name="cart">Carrinho</string>
    <string name="support">Chat</string>
    <string name="category">Categoria</string>
    <string name="account">Acessar</string>
    <string name="you_have">Você têm</string>
    <string name="waiting_for_buyer">Esperando por você</string>
    <string name="itens">items</string>
    <string name="update">Atualizar ofertas</string>
    <string name="initslide">Slide iniciado</string>
    <string name="endslide">Slide encerrado</string>
    <string name="banner">Banner</string>
    <string name="nicetext">Texto legal</string>
    <string name="nicetitle">Título legal</string>
    <string name="nicebuttom">Botão legal</string>
    <string name="clickNiceButtom">Você clicou no botão legal!</string>
    <string name="checkemail">Cheque seu e-mail</string>

    <string-array name="produtos">
        <item>Misopethanmenos</item>
        <item>Dipirona</item>
        <item>Aspirina</item>
        <item>Creme dental</item>
        <item>Diclofenaco</item>
        <item>Tilenol</item>

        <item>R$ 500,90</item>
        <item>R$ 10,90</item>
        <item>R$ 5,00</item>
        <item>R$ 18,50</item>
        <item>R$ 0,90</item>
        <item>R$ 0,90</item>

        <item>ABC</item>
        <item>ABC</item>
        <item>ABC</item>
        <item>ABC</item>
        <item>ABC</item>

        <item>Genérico</item>
        <item>Genérico</item>
        <item>Genérico</item>
        <item>Genérico</item>
        <item>Genérico</item>

    </string-array>
    <string name="numero_chat">+5511997761865</string>
</resources>