<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView

        android:layout_marginStart="5dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:textSize="45sp"
        android:layout_height="wrap_content"
        android:text="@string/itens" />

    <!-- aqui têm que ficar 0 ou X itens -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_buyer" />




</LinearLayout>