<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".BannerLegalActivity">

    <include android:id="@+id/barra_carrinho_include" layout="@layout/barra_do_carrinho"/>

    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_marginTop="70dp"
        android:layout_alignEnd="@id/barra_carrinho_include"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/banner1" />

    <TextView
        android:id="@+id/titulolegal"
        android:layout_alignLeft="@id/imageViewBanner"
        android:layout_marginTop="230dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/nicetitle" />

    <TextView
        android:id="@+id/textolegal"
        android:layout_alignLeft="@id/imageViewBanner"
        android:layout_marginTop="250dp"
        android:textAlignment="textStart"
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="15sp"
        android:text="@string/nicetext" />

    <Button
        android:id="@+id/bt_nice"
        android:layout_width="match_parent"
        android:background="@drawable/background_bts"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:text="@string/nicebuttom" />


</RelativeLayout>